tests/core/invalid/invalid-inherit-primitive.cl
class Main inherits Int {
  main() : Object {
    out_string("Hi World!\n")
  };
};